--- a/styles.css
+++ b/styles.css
@@ -1,15 +1,56 @@
-body{
-    background-color: bisque;
-    font-family: Arial, Helvetica, sans-serif;
+@import url('https://fonts.googleapis.com/css2?family=Kanit&display=swap');
+
+body {
+    background-color: #0C1D33;
 }
 
-.header{
-    display: block;
-    width: 300px;
-    margin-left: auto;
-    margin-right: auto;
+.header {
+    font-family: 'Kanit', sans-serif;
+    text-align: center;
+    color: #18717A;
 }
 
-.main-paragraph{
-    font-size: medium;
+.middle {
+    text-align: center;
+    margin-top: 75px;
+}
+
+.footer {
+    font-family: 'Kanit', sans-serif;
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: #18717A;
+    color: #5DB79F;
+    text-align: center;
+}
+
+.footer a {
+    color: white;
+}
+
+.footer p {
+    margin-bottom: 17px;
+    font-size: 15px;
+}
+
+.btn {
+    font-family: 'Kanit', sans-serif;
+    font-size: 16px;
+    background-color: #5DB79F;
+    height: 30px;
+    width: 100px;
+    border-radius: 5px;
+}
+
+.btn:hover {
+    background-color: #ECE4C4;
+}
+
+#time {
+    font-family: 'Kanit', sans-serif;
+    font-size: 100px;
+    margin: 0;
+    color: #ECE4C4;
 }
